feat: theme switch

--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -1,5 +1,5 @@
 ---
-
+import ThemeToggler from "./ThemeToggler.astro";
 ---
 
 <nav>
@@ -14,6 +14,7 @@
       <a href="#">Beyond technology</a>
     </li>
   </ul>
+  <ThemeToggler />
 </nav>
 
 <style>
@@ -29,6 +30,7 @@
     padding: 0;
     margin: 0 auto 0 0;
   }
+
   nav li {
     opacity: 0.8;
     list-style: none;
@@ -36,8 +38,13 @@
   }
 
   a {
+    color: var(--grey-400);
     padding: 0.5rem 1rem;
     border-radius: 10px;
     text-decoration: none;
+  }
+
+  a:hover {
+    color: var(--grey-900);
   }
 </style>
