--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -4,7 +4,7 @@ import NavigationBar from "../components/NavigationBar.astro";
 import "../styles/global.css";
 ---
 
-<html lang="en">
+<html class="dark" lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
