--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -20,6 +20,55 @@ import "../styles/global.css";
     />
 
     <title>Astro</title>
+
+    <script is:inline>
+      /** Represent the toggle theme class with a variable */
+      const DARK_THEME_CLASS = "dark";
+
+      /** Represent the local storage key by a variable */
+      const COLOUR_MODE = "COLOUR_MODE";
+
+      /** Represent the local storage values by variables */
+      const LIGHT_THEME = "LIGHT";
+      const DARK_THEME = "DARK";
+
+      /** Grab the toggle */
+      const toggle = document.querySelector("button");
+
+      /** Grab the document root element. In this case <html>  */
+      const rootEl = document.documentElement;
+
+      const getInitialColourMode = () => {
+        /** Get colour mode from local storage **/
+        const previouslySavedColourMode =
+          window.localStorage.getItem(COLOUR_MODE);
+        if (previouslySavedColourMode) {
+          return previouslySavedColourMode;
+        }
+
+        /** Does the user prefer dark mode, e.g., through an operating system or user agent setting? */
+        if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+          return DARK_THEME;
+        }
+
+        /** Default to the light theme */
+        return LIGHT_THEME;
+      };
+
+      /**Get initial colour mode */
+      const initialColourMode = getInitialColourMode();
+
+      const setInitialColourMode = (mode) => {
+        if (mode === LIGHT_THEME) {
+          rootEl.classList.remove(DARK_THEME_CLASS);
+        } else {
+          rootEl.classList.add(DARK_THEME_CLASS);
+        }
+      };
+
+      /** Set the initial colour mode as soon as the script is executed */
+      setInitialColourMode(initialColourMode);
+    </script>
   </head>
   <body>
     <main>
