feat: create page using markdown with layout integration;

--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -8,10 +8,10 @@ import ThemeToggler from "./ThemeToggler.astro";
       <a href="/">Home</a>
     </li>
     <li>
-      <a href="#">Philosophies</a>
+      <a href="/philosophies">Philosophies</a>
     </li>
     <li>
-      <a href="#">Beyond technology</a>
+      <a href="/beyond-tech">Beyond technology</a>
     </li>
   </ul>
   <ThemeToggler />
