--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,3 +20,13 @@ html.dark {
   --grey-600: #ffffff;
   --grey-900: #fafafa;
 }
+
+p,
+li {
+  font-size: 1rem;
+  color: var(--gray-400);
+  opacity: 0.8;
+}
+li {
+  margin: 1rem 0;
+}
