--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -2,6 +2,12 @@
 import Footer from "../components/Footer.astro";
 import NavigationBar from "../components/NavigationBar.astro";
 import "../styles/global.css";
+
+type Props = {
+  title: string;
+};
+
+const { title } = Astro.props;
 ---
 
 <html class="dark" lang="en">
@@ -19,7 +25,7 @@ import "../styles/global.css";
       rel="stylesheet"
     />
 
-    <title>Astro</title>
+    <title>{"Understanding Astro | " + title}</title>
 
     <script is:inline>
       /** Represent the toggle theme class with a variable */
