--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Main from "../layouts/Main.astro";
 const profilePicture = "https://i.imgur.com/JPGFE75.jpg";
 ---
 
-<Main>
+<Main title="Home">
   <div class="profile">
     <img
       src={profilePicture}
