feat: create Card and Cards components with mapping functionality;

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Cards from "../components/Cards.astro";
 import Main from "../layouts/Main.astro";
 
 const profilePicture = "https://i.imgur.com/JPGFE75.jpg";
@@ -12,6 +13,28 @@ const profilePicture = "https://i.imgur.com/JPGFE75.jpg";
       alt="Frau Katerina's headshot."
       width="100px"
       height="100px"
+    />
+    <Cards
+      cards={[
+        {
+          title: "Here are my guiding philosophies for life",
+          gradientFrom: "#818cf8",
+          gradientTo: "#d8b4fe",
+          to: "/philosophies",
+        },
+        {
+          title: "A summary of my work history",
+          gradientFrom: "#fde68a",
+          gradientTo: "#fca5a5",
+          to: "/work-summary",
+        },
+        {
+          title: "What I do beyond technology",
+          gradientFrom: "#6ee7b7",
+          gradientTo: "#9333ea",
+          to: "/beyond-tech",
+        },
+      ]}
     />
     <div class="profile__details">
       <h1>Frau Katerina</h1>
